BoaUAT/src/objects/Credit_Application_Form__c.object
<CustomObject>
    <description>Used to store CAF information for particular customer. This object wont be there in EXO system.</description>
    <fields>
        <fullName>Accountant__c</fullName>
        <label>Accountant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts_Email__c</fullName>
        <label>Accounts Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <label>Accounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Registration_Number__c</fullName>
        <label>Company Registration Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Pdf_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Pdf Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Name1__c</fullName>
        <formula>Customer_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Application Forms</relationshipLabel>
        <relationshipName>Credit_Application_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Business_Started__c</fullName>
        <label>Date Business Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth1__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth2__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth3__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Have_there_been_any_problems_concerns2__c</fullName>
        <label>Have there been any problems/concerns?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_there_been_any_problems_concerns3__c</fullName>
        <label>Have there been any problems/concerns?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_there_been_any_problems_or_concern__c</fullName>
        <label>Have there been any problems/concerns?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_long_have_they_been_trading_with_you__c</fullName>
        <inlineHelpText>How long have they been trading with you?</inlineHelpText>
        <label>Trading Duration?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_s_Email__c</fullName>
        <label>Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name1__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name3__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Physical_Address1__c</fullName>
        <label>Physical Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address2__c</fullName>
        <label>Physical Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address3__c</fullName>
        <label>Physical Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address__c</fullName>
        <label>Postal Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Private_Telephone_Number1__c</fullName>
        <label>Private Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Private_Telephone_Number2__c</fullName>
        <label>Private Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Private_Telephone_Number3__c</fullName>
        <label>Private Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ProcessRefrence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProcessRefrence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchasing_Email__c</fullName>
        <label>Purchasing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Purchasing__c</fullName>
        <label>Purchasing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_1_Email__c</fullName>
        <label>Recipient 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient_2_Email__c</fullName>
        <label>Recipient 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reference1__c</fullName>
        <label>Reference 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_1_Phone__c</fullName>
        <label>Reference 1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reference_2_Phone__c</fullName>
        <label>Reference 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reference_2__c</fullName>
        <label>Reference 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_3_Phone__c</fullName>
        <label>Reference 3 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reference_3__c</fullName>
        <label>Reference 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Office_Address__c</fullName>
        <label>Registered Office Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SolicitorTelephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Solicitor__c</fullName>
        <label>Solicitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <label>Submitted By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Trading_Duration2__c</fullName>
        <description>How long have they been trading with you?</description>
        <label>Trading Duration?</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trading_Duration3__c</fullName>
        <description>How long have they been trading with you?</description>
        <label>Trading Duration?</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Business__c</fullName>
        <label>Type Of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Trader</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_are_their_trading_terms2__c</fullName>
        <label>What are their trading terms?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_are_their_trading_terms3__c</fullName>
        <label>What are their trading terms?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_are_their_trading_terms__c</fullName>
        <label>What are their trading terms?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_date_do_they_normally_pay2__c</fullName>
        <label>What date do they normally pay?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_date_do_they_normally_pay3__c</fullName>
        <label>What date do they normally pay?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_date_do_they_normally_pay__c</fullName>
        <label>What date do they normally pay?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_size_customer_are_they2__c</fullName>
        <label>What size customer are they?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_size_customer_are_they3__c</fullName>
        <label>What size customer are they?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_size_customer_are_they__c</fullName>
        <label>What size customer are they?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>envelopeId__c</fullName>
        <label>Envelope Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Application Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAF-{0000}</displayFormat>
        <label>Credit Application Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Application Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>